--- a/conversorMoedas/conversorMoedas.html
+++ b/conversorMoedas/conversorMoedas.html
@@ -10,20 +10,20 @@
 <body>
     <div id="container"> 
         <h1>Conversor de moedas</h1>
-        <input type="text" id="valorEntrada">
+        <input type="text"  id="valorEntrada" placeholder="Digite para converter">
         <select name="moeda1" id="moeda1">
             <option value="real">Real</option>
             <option value="dolar">Dolar</option>
             <option value="euro">Euro</option>
         </select>
-        <button onclick="inverter();">Inverter</button>
+        <button id="botao-inverter">Inverter</button>
         <select name="moeda2" id="moeda2">
             <option value="real">Real</option>
-            <option value="dolar">Dolar</option>
+            <option value="dolar" selected>Dolar</option>
             <option value="euro">Euro</option>
         </select>
-        <button onclick="limpar();">Limpar</button>
-        <button onclick="converter();">Converter</button>
+        <button id ="botao-limpar">Limpar</button>
+        <button id ="botao-converter">Converter</button>
         <p id="resultado"></p>
     </div>
     <script src="scriptConversor.js"></script>
