--- a/conversorMoedas/conversorMoedas.html
+++ b/conversorMoedas/conversorMoedas.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conversor de Moedas</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="estiloConversor.css">
 </head>
 <body>
@@ -26,6 +29,18 @@
         <button id ="botao-converter">Converter</button>
         <p id="resultado"></p>
     </div>
+    <div id="historico-conversoes" i>
+        <li>
+            <ul>conversão 1</ul>
+            <ul>conversão 2</ul>
+            <ul>conversão 3</ul>
+        </li>
+    </div>
+    <div id="mensagem-usuario" >
+        <p>Utilize o nosso sistema com moderação. As conversões são fake</p>
+        <button id="botao-aceita-mensagem">ok, estou de acordo</button>
+    </div>
+
     <script src="scriptConversor.js"></script>
 </body>
 </html>
