--- a/index.html
+++ b/index.html
@@ -7,23 +7,13 @@
     <title>Programação WEB CEUB</title>
 </head>
 <body>
-    
-    <a href="conversorMoedas/conversorMoedas.html"> Conversor de Moedas</a>
-    <div id="titulos"> 
-
-        <h1>Título de nível 1</h1>
-        <h2>Título de nível 2</h2>
-        <h3>Título de nível 3</h3>
-        <h4>Título de nível 4</h4>
+    <div id="container"> 
+    <a href="conversorMoedas/conversorMoedas.html"> Conversor de Moedas </a>
     </div>
-    <p>Parágrafo</p>
-    <ol>
-        <li>lalalalala</li>
-    </ol>
-    <ul>
-        <li> lalalalal</li>
-    </ul>
-    
-    <script src="script.js"></script>
+
+    <footer> 
+        <p>Todos os direitos reservados</p>
+    </footer>
+
 </body>
 </html>
